fixed video spacing

--- a/app/assets/stylesheets/components/_tab.scss
+++ b/app/assets/stylesheets/components/_tab.scss
@@ -4,7 +4,7 @@
 }
 .tabs-underlined {
   .tab-underlined {
-    color: black;
+    color: white;
     padding: 8px;
     margin: 8px 16px;
     opacity: .4;
